--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,300italic,400italic");
-@import url("fontawesome-all.min.css");
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css");
+@import url("https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css");
 
 /*
 	Astral by HTML5 UP
@@ -1306,28 +1307,33 @@ input, select, textarea {
 	}
 
 	body {
+		-webkit-text-size-adjust: none;
+		background: #1b1f22;
+	}
+	
+	/* body {
 		background-image: url("images/astro_bg.jpg");
 		background-repeat: no-repeat;
 		background-size: cover;
 		background-attachment: fixed;
 		overflow-y: scroll;
-	}
+	} */
 
-		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
-			-moz-animation: none !important;
-			-webkit-animation: none !important;
-			-ms-animation: none !important;
-			animation: none !important;
-			-moz-transition: none !important;
-			-webkit-transition: none !important;
-			-ms-transition: none !important;
-			transition: none !important;
-		}
+	body.is-preload *, body.is-preload *:before, body.is-preload *:after {
+		-moz-animation: none !important;
+		-webkit-animation: none !important;
+		-ms-animation: none !important;
+		animation: none !important;
+		-moz-transition: none !important;
+		-webkit-transition: none !important;
+		-ms-transition: none !important;
+		transition: none !important;
+	}
 
 	body, input, textarea, select {
 		font-family: 'Source Sans Pro', sans-serif;
 		font-weight: 300;
-		color: #777777;
+		color: #444444;
 		font-size: 20pt;
 		line-height: 1.75em;
 	}
@@ -1366,7 +1372,7 @@ input, select, textarea {
 
 	strong, b, h1, h2, h3, h6 {
 		font-weight: 400;
-		color: #363636;
+		color: #292929;
 	}
 
 	h1 {
@@ -1507,61 +1513,6 @@ input, select, textarea {
 			border-bottom: solid 2px #f4f4f4;
 		}
 
-/* Form */
-
-	form label {
-		display: block;
-		font-weight: 400;
-		color: #363636;
-		margin: 0 0 1em 0;
-	}
-
-	form input[type="text"],
-	form input[type="email"],
-	form input[type="password"],
-	form select,
-	form textarea {
-		-webkit-appearance: none;
-		border: 0;
-		background: #f4f4f4;
-		padding: 0.75em;
-		width: 100%;
-		-moz-transition: background-color .25s ease-in-out;
-		-webkit-transition: background-color .25s ease-in-out;
-		-ms-transition: background-color .25s ease-in-out;
-		transition: background-color .25s ease-in-out;
-	}
-
-		form input[type="text"]:focus,
-		form input[type="email"]:focus,
-		form input[type="password"]:focus,
-		form select:focus,
-		form textarea:focus {
-			background: #f8f8f8;
-		}
-
-	form input[type="text"],
-	form input[type="email"],
-	form input[type="password"],
-	form select {
-		line-height: 1.35em;
-	}
-
-	form ::-webkit-input-placeholder {
-		color: #999;
-	}
-
-	form :-moz-placeholder {
-		color: #999;
-	}
-
-	form ::-moz-placeholder {
-		color: #999;
-	}
-
-	form :-ms-input-placeholder {
-		color: #999;
-	}
 
 /* Section/Article */
 
@@ -1579,12 +1530,12 @@ input, select, textarea {
 
 		header > pp {
 			margin: 0.1em 0 0 0;
-			color: #aaa;
+			color: #444444;
 		}	
 
 		header > p {
 			margin: 0.5em 0 0 0;
-			color: #aaa;
+			color: #444444;
 		}
 
 		@media screen and (max-width: 736px) {
@@ -1731,25 +1682,6 @@ input, select, textarea {
 
 		}
 
-/* List */
-
-	ul {
-		list-style: disc;
-		padding-left: 1em;
-	}
-
-		ul li {
-			padding-left: 0.5em;
-		}
-
-	ol {
-		list-style: decimal;
-		padding-left: 1.25em;
-	}
-
-		ol li {
-			padding-left: 0.25em;
-		}
 
 /* Actions */
 
@@ -1817,6 +1749,42 @@ input, select, textarea {
 		.icon > .label {
 			display: none;
 		}
+    
+
+        .icon-ai {
+            text-decoration: none;
+            position: relative;
+            text-decoration: none;
+        }
+    
+            .icon-ai:before {
+                -moz-osx-font-smoothing: grayscale;
+                -webkit-font-smoothing: antialiased;
+                display: inline-block;
+                font-style: normal;
+                font-variant: normal;
+                text-rendering: auto;
+                line-height: 1;
+                text-transform: none !important;
+                font-family: 'Academicons';
+                font-weight: 400;
+            }
+    
+            .icon-ai.solid:before {
+                font-weight: 900;
+            }
+    
+            .icon-ai.brands:before {
+                font-family: 'Academicons';
+            }
+    
+            .icon-ai:before {
+                line-height: inherit;
+            }
+    
+            .icon-ai > .label {
+                display: none;
+            }
 
 /* Nav */
 
@@ -1858,7 +1826,7 @@ input, select, textarea {
 				left: 50%;
 				bottom: -0.70em;
 				margin-left: -0.5em;
-				border-bottom: solid 0em  rgba(255, 255, 255, 0.90); /*#ffffff;*/
+				border-bottom: solid 0em  rgba(255, 255, 255, 0.75); /*#ffffff;*/
 				border-left: solid 0.5em transparent;
 				border-right: solid 0.5em transparent;
 				-moz-transition: border-bottom-width .25s ease-in-out;
@@ -1998,8 +1966,8 @@ input, select, textarea {
 		position: relative;
 		overflow: hidden;
 		width: 100%;
-		background: rgba(255, 255, 255, 0.90); /*#ffffff;*/
-		box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.25);
+		background: rgba(255, 255, 255, 0.75); /*#ffffff;*/
+		box-shadow: 0px 3px 0px 0px rgba(0, 0, 0, 0.25);
 		-moz-transition: min-height 0.5s ease-in-out, max-height 0.5s ease-in-out;
 		-webkit-transition: min-height 0.5s ease-in-out, max-height 0.5s ease-in-out;
 		-ms-transition: min-height 0.5s ease-in-out, max-height 0.5s ease-in-out;
@@ -2066,7 +2034,7 @@ input, select, textarea {
 						position: absolute;
 						top: 0;
 						left: 0;
-						background: url("images/overlay.png");
+						background: transparent;
 						width: 100%;
 						height: 100%;
 						z-index: 1;
@@ -2095,14 +2063,14 @@ input, select, textarea {
 						position: absolute;
 						right: 0;
 						top: 50%;
-						margin-top: -1.375em;
-						width: 2.75em;
-						height: 2.75em;
+						margin-top: -1.40em;
+						width: 2.5em;
+						height: 2.5em;
 						background: #000;
-						background: rgba(0, 0, 0, 0.75);
+						background: rgba(0, 0, 0, 0.5);
 						color: #ffffff;
 						text-align: center;
-						line-height: 2.75em;
+						line-height: 2.5em;
 						font-size: 1.5em;
 						z-index: 1;
 						-moz-transition: width .15s ease-in-out, padding-right .15s ease-in-out;
@@ -2124,7 +2092,7 @@ input, select, textarea {
 
 					#main > .panel.intro .pic:hover .arrow {
 						width: 3em;
-						padding-right: 0.25em;
+						padding-right: 0.5em;
 					}
 
 				#main > .panel.intro header {
@@ -2191,112 +2159,6 @@ input, select, textarea {
 
 				}
 
-/* Footer */
-
-	#footer {
-		color: rgba(255, 255, 255, 0.45);
-		text-align: center;
-		padding: 2em 0 0 0;
-		font-size: 0.75em;
-	}
-
-		#footer a {
-			color: #ddd;
-			color: rgba(255, 255, 255, 0.65);
-			-moz-transition: color .25s ease-in-out;
-			-webkit-transition: color .25s ease-in-out;
-			-ms-transition: color .25s ease-in-out;
-			transition: color .25s ease-in-out;
-		}
-
-			#footer a:hover {
-				color: white;
-			}
-
-		#footer .copyright {
-			list-style: none;
-			padding-left: 0;
-		}
-
-			#footer .copyright li {
-				display: inline-block;
-				padding-left: 1em;
-				margin-left: 1em;
-				border-left: solid 1px rgba(255, 255, 255, 0.25);
-				line-height: 1;
-			}
-
-				#footer .copyright li:first-child {
-					padding-left: 0;
-					margin-left: 0;
-					border-left: 0;
-				}
-
-		@media screen and (max-width: 736px) {
-
-			#footer .copyright li {
-				padding-left: 0.5em;
-				margin-left: 0.5em;
-			}
-
-		}
-
-
-/* BUTTON */
-
-.btn {
-  border-width: 2px;
-  font-weight: 400;
-  font-size: 0.8571em;
-  line-height: 1.35em;
-  margin: 5px 1px;
-  border: none;
-  border-radius: 0.1875rem;
-  padding: 11px 22px;
-  cursor: pointer;
-  background-color: #888;
-  color: #FFFFFF; }
-
-.btn.btn-icon {
-    height: 2.375rem;
-    min-width: 2.375rem;
-    width: 2.375rem;
-    padding: 0;
-    font-size: 0.9375rem;
-    overflow: hidden;
-    position: relative;
-    line-height: normal; }
-    
-    .btn.btn-icon.btn-lg {
-      height: 3.6rem;
-      min-width: 3.6rem;
-      width: 3.6rem; }
-      .btn.btn-icon.btn-lg i.now-ui-icons,
-      .btn.btn-icon.btn-lg i.fa,
-      .btn.btn-icon.btn-lg i.ai {
-        font-size: 1.325rem; }
-    .btn.btn-icon:not(.btn-footer) i.now-ui-icons,
-    .btn.btn-icon:not(.btn-footer) i.fa,
-    .btn.btn-icon:not(.btn-footer) i.ai {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-12px, -12px);
-      line-height: 1.5626rem;
-      width: 25px; }
-  .btn:not(.btn-icon) .now-ui-icons {
-    position: relative;
-    top: 1px; }
-
-	.btn-round {
-		border-width: 1px;
-		border-radius: 30px !important;
-		padding: 11px 23px; }
-
-		  .btn-lg {
-			font-size: 1em;
-			border-radius: 0.25rem;
-			padding: 15px 48px; }
 
 
 /* Images Gallery Style*/
@@ -2419,3 +2281,78 @@ input, select, textarea {
 
 .img-raised {
     box-shadow: 0px 10px 25px 0px rgba(0, 0, 0, 0.); }
+
+
+/* BG */
+
+#bg {
+	-moz-transform: scale(1.0);
+	-webkit-transform: scale(1.0);
+	-ms-transform: scale(1.0);
+	transform: scale(1.0);
+	-webkit-backface-visibility: hidden;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100vh;
+	z-index: -1;
+}
+
+	#bg:before, #bg:after {
+		content: '';
+		display: block;
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+	}
+
+	#bg:before {
+		-moz-transition: background-color 2.5s ease-in-out;
+		-webkit-transition: background-color 2.5s ease-in-out;
+		-ms-transition: background-color 2.5s ease-in-out;
+		transition: background-color 2.5s ease-in-out;
+		-moz-transition-delay: 0.75s;
+		-webkit-transition-delay: 0.75s;
+		-ms-transition-delay: 0.75s;
+		transition-delay: 0.75s;
+		background-image: radial-gradient( rgba(255, 255, 255, 0), rgb(0, 0, 0, 0.5)), url("images/overlay.png");
+		background-size: auto, 256px 256px;
+		background-position: center, center;
+		background-repeat: no-repeat, repeat;
+		z-index: 2;
+	}
+
+	#bg:after {
+		-moz-transform: scale(1.125);
+		-webkit-transform: scale(1.125);
+		-ms-transform: scale(1.125);
+		transform: scale(1.125);
+		-moz-transition: -moz-transform 0.325s ease-in-out, -moz-filter 0.325s ease-in-out;
+		-webkit-transition: -webkit-transform 0.325s ease-in-out, -webkit-filter 0.325s ease-in-out;
+		-ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out;
+		transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out;
+		background-image: url("images/astro_bg.jpg");
+		background-position: center;
+		background-size: cover;
+		background-repeat: no-repeat;
+		z-index: 1;
+	}
+
+	body.is-article-visible #bg:after {
+		-moz-transform: scale(1.0825);
+		-webkit-transform: scale(1.0825);
+		-ms-transform: scale(1.0825);
+		transform: scale(1.0825);
+		-moz-filter: blur(0.2rem);
+		-webkit-filter: blur(0.2rem);
+		-ms-filter: blur(0.2rem);
+		filter: blur(0.2rem);
+	}
+
+	body.is-preload #bg:before {
+		background-color: #000000;
+	}
+
